<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application -->
	<color name="holo_blue_light">#ff33b5e5</color>
	
    <!-- Math Alarm Activity -->
    <string name="app_name">CodeName AlarmClock</string>
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>
    <string name="textme">A minimalistic Alarm Clock</string>
    <string name="tip">This window activity initiates a QRCODE simulator scan. Check HELP to Learn more. In relation to the simulation in this alarm clock
app, You have no choice but to wake-up and scan a barcode of your own preference for this alarm to be turned off. Have a GoodDay!!!</string>
    <string name="ha">Tap SCAN to Cancel the Alarm</string>
    <string name="tutorial">Welcome to the Help Screen</string>
    <string name="ques1">Need Help?</string>
    <string name="Hint">What is it all about</string>
    <string name="guide">This app is based on a QRCODE simulator scan. On pressing the scan button
a simulator scanner will initiate turning your phones camera
into a barcode or a QRcode reader.  Primarily, you are required to scan a Barcode (mainly found on your shampoo or any other product
in your house hold) to quit the annoying ringing. You have no choice but to wake-up and
scan a barcode of your own preference for this alarm to be turned off.
        You do not have to be a tech Guru to use incredibly easy app.
        Now To all those Heavy sleepers have fun getting past this,that is if you DARE!!!</string>
    <string name="developed">This App was developed by Yours Truly Kelvin Keegan</string>
    <string name="copy">All Rights Reserved © 2016  </string>
    
    <string name="button_new">New</string>
    
    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>    
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>
    <string name="assist">Help</string>
    
    <!-- Alert -->
	<string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">,</string>
	<string name="clear_button_text">Clear</string>
	<string name="minus_button_text">-</string>
	
	
	<color name="title_background_color">#000000</color>
		
	<string name="button_delete">Delete</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

</resources>
