<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_item_new"
        android:title="@string/menu_item_new"
        android:icon="@drawable/glyphicons_432_plus"
        appcompat:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_item_save"
        android:title="@string/menu_item_save"
        android:icon="@drawable/glyphicons_443_floppy_disk"
        appcompat:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/glyphicons_016_bin"
        appcompat:showAsAction="always">
    </item>    
    <item
        android:id="@+id/menu_item_rate"
        android:title="@string/menu_item_rate"
        android:icon="@drawable/glyphicons_049_star">
    </item>
    <item
        android:id="@+id/menu_item_website"
        android:icon="@drawable/glyphicons_340_globe"
        android:title="@string/menu_item_website">
    </item>
    <item
        android:id="@+id/menu_item_report"     
        android:title="@string/menu_item_report"
        android:icon="@drawable/glyphicons_340_globe">
    </item>
    <item
        android:id="@+id/help"
        android:title="@string/assist"
        android:icon="@drawable/rockethelp"
        appcompat:showAsAction="always">

    </item>

</menu>